Attempting to fix spacing issues

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,5 @@
 .w-custom {
-    width: 60%;
-    padding: 4%;
+
     background-color: black;
 }
 
